compiler/testData/diagnostics/tests/extensions/contextReceivers/syntaxError.kt
// FIR_IDENTICAL
// !LANGUAGE: +ContextReceivers

context(
<!SYNTAX!><!>fun foo() {
}